[ACC-2678] Page metadata total_items_exact can be absent (not null) when it can not be calculated
