# contentgrid-appserver-application-model-openapi/src/test/resources/com/contentgrid/appserver/application/model/openapi/openApiSpec_isContributed.yaml
@@ -850,9 +850,8 @@ components:
           description: "Estimated total number of items across all pages"
         total_items_exact:
           type: "integer"
-          description: "Exact total number of items across all pages (may be null\
+          description: "Exact total number of items across all pages (may be absent\
             \ if no exact number could be calculated)"
-          nullable: true
         next_cursor:
           type: "string"
           description: "Cursor to access the next page of results (absent if there\
@@ -868,7 +867,6 @@ components:
       required:
       - "size"
       - "total_items_estimate"
-      - "total_items_exact"
     partyCollection:
       type: "object"
       properties:
